# simple-cpp-accessibility

./: .gitignore  AccessibleObject.cpp  AccessibleObject.hpp  CMakeLists.txt  README.md  dump-tree.cpp
src/: CMakeLists.txt
src/simple_cpp/accessibility/: AccessibleError.cpp  AccessibleError.hpp  AccessibleObject.cpp  AccessibleObject.hpp
